baseline-build.log
this path will be fetched (1.1 MiB download, 7.1 MiB unpacked):
  /nix/store/x12lw455sq6qy2wcya85d7rb88ybc3df-bash-interactive-5.3p9
copying path '/nix/store/x12lw455sq6qy2wcya85d7rb88ybc3df-bash-interactive-5.3p9' from 'https://cache.nixos.org'...
              AssetProcessor
              AssetServer
              AssetSourceBuilders
              AtmosphereBuffer
            and 264 others
note: required by a bound in `bevy::prelude::Commands::<'w, 's>::insert_resource`
   --> /home/bot/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/bevy_ecs-0.18.1/src/system/commands/mod.rs:893:31
    |
893 |     pub fn insert_resource<R: Resource>(&mut self, resource: R) {
    |                               ^^^^^^^^ required by this bound in `Commands::<'w, 's>::insert_resource`

error[E0502]: cannot borrow `state` as immutable because it is also borrowed as mutable
   --> src/net/render.rs:308:22
    |
306 |         if let Some(net) = state.net.as_mut() {
    |                            ----- mutable borrow occurs here
307 |             net.broadcast(&msg);
308 |             let me = state.ls.me();
    |                      ^^^^^ immutable borrow occurs here
309 |             for from in net.drain_inbox() {
    |                         --- mutable borrow later used here

Some errors have detailed explanations: E0277, E0502, E0609.
For more information about an error, try `rustc --explain E0277`.
error: could not compile `rl` (lib) due to 5 previous errors
s errors
warning: build failed, waiting for other jobs to finish...
EXIT=101
EXIT=101
